--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="image/rizzosphotograph_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/menu.css">
-    <link rel="stylesheet" href="assets/style/contact.css">
+    <link rel="stylesheet" href="assets/style/about.css">
     <link rel="stylesheet" href="assets/style/rodape.css">
     <script src="assets/scripts/menu-cel.js" defer></script>
     <title>Rizzo's Photograph</title>
@@ -32,37 +32,18 @@
             <div class="img"></div>
         </section>
         <section>
-            <h1 class="titulo-main">Contact</h1>
-            <form class="formulario" action="https://formspree.io/f/xoqrejpa" method="POST">
-                <label>
-                    <input class="questão-formulario" id="nome" placeholder="Nome*" type="text" name="nome" required>
-                </label>
-                <br>
-                <label>
-                    <input class="questão-formulario" id="email" placeholder="E-mail*" type="email" name="email" required>
-                </label> 
-                <br>
-                <label>
-                    <input class="questão-formulario" id="whatsapp" type="number" required="required" maxlength="11"  name="whatsapp" placeholder="Whatsapp* DDD" />
-                </label class="questão-formulario">
-                <br>
-                <label>
-                    <select name="album" required class="questão-formulario">
-                        <option disabled selected hidden aria-required="false">Tipo de álbum*</option>
-                        <option>opção_1</option>
-                        <option>opção_2</option>
-                        <option>opção_3</option>
-                        <option>opção_4</option>
-                    </select>
-                </label>
-                <br>
-                <label>
-                    <textarea class="questão-formulario" id="msg" placeholder="Mensagem" name="mensagem"></textarea>
-                </label>
-                <br>
-                <a href="contact.html"><button class="enviar-formulario" id="enviar" type="submit">Enviar</button></a>
-            </form>
-        </section>
+        <div class="titulo-main">
+            <h1>Sobre</h1>
+            <h2>RIZZO'S PHOTOGRAPH</h2>
+        </div>
+        <div class="texto-main">
+            <p>Era um hobby virou paixão, veio a formação, os primeiros jobs. Ainda não sobrevivo da fotografia...mas ainda vou viver disso!!!</p>
+            <p>Profissionalmente a Rizzo's Photograph nasceu a mais ou menos 3 anos, tiro foto de tudo, mas minha paixão são os casais... seja namorando ou casando é a fase da vida que me encanta.</p>
+            <p>Ver uma família nascendo... no dia do sim.</p>
+        </div>
+        <div class="bt-soliciatar-sobre">
+            <button>solicite um orçamento</button>
+        </div>
     </main>
     <footer>
         <section class="facebook-contato">
@@ -99,7 +80,7 @@
                     <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt=""></a>
                     <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt=""></a>
                 </div>
-                <a href="contact.html"><button class="botão-orçamento-rodape">Orçamento</button></a>
+                <button class="botão-orçamento-rodape">Orçamento</button>
         </section>
         <div class="copy">&copy Rizzo's Photograph</div>
     </footer>
