--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div id="preto"></div>
     <header class="menu">
         <div class="proporcao-menu logo-pagina-inicial" >
-            <a href=""><img src="image/logo/img_logo.png" style="width: 150px; padding: 36px;" alt=""></a>
+            <a href=""><img src="image/logo/img_logo.png" alt=""></a>
         </div>
         <input type="checkbox" id="bt_menu">
         <label for="bt_menu" class="overlay-button"><img class="form_bt_menu" src="image/icon-menu.svg" alt="imagem botão menu"></label>
         <div class="proporcao-menu abas-pagina-inicial">
             <ul>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="">Jobs</a></li>
             </ul>
         </div>
