--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt=""></a>
                     <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt=""></a>
                 </div>
-                <button class="botão-orçamento-rodape">Orçamento</button>
+                <a href="contact.html"><button class="botão-orçamento-rodape">Orçamento</button></a>
         </section>
         <div class="copy">&copy Rizzo's Photograph</div>
     </footer>
