--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/style/contact.css">
     <link rel="stylesheet" href="assets/style/rodape.css">
     <script src="assets/scripts/menu-cel.js" defer></script>
-    <title>Rizzo's Photograph</title>
+    <title>Rizzo's Photograph - Contato</title>
 </head>
 <body>
     <div id="preto"></div>
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="">Jobs</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
             </ul>
         </div>
     </header>
