--- a/jobs.html
+++ b/jobs.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="image/rizzosphotograph_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/menu.css">
-    <link rel="stylesheet" href="assets/style/about.css">
+    <link rel="stylesheet" href="assets/style/jobs.css">
     <link rel="stylesheet" href="assets/style/rodape.css">
     <script src="assets/scripts/menu-cel.js" defer></script>
-    <title>Rizzo's Photograph - Sobre mim</title>
+    <script src="assets/scripts/jobs.js" defer></script>
+    <title>Rizzo's Photograph - Trabalhos</title>
 </head>
 <body>
     <div id="preto"></div>
@@ -27,24 +28,7 @@
             </ul>
         </div>
     </header>
-    <main id="corpo">
-        <section class="banner">
-            <div class="img"></div>
-        </section>
-        <section>
-        <div class="titulo-main">
-            <h1>Sobre</h1>
-            <h2>RIZZO'S PHOTOGRAPH</h2>
-        </div>
-        <div class="texto-main">
-            <p>Era um hobby virou paixão, veio a formação, os primeiros jobs. Ainda não sobrevivo da fotografia...mas ainda vou viver disso!!!</p>
-            <p>Profissionalmente a Rizzo's Photograph nasceu a mais ou menos 3 anos, tiro foto de tudo, mas minha paixão são os casais... seja namorando ou casando é a fase da vida que me encanta.</p>
-            <p>Ver uma família nascendo... no dia do sim.</p>
-        </div>
-        <div class="bt-soliciatar-sobre">
-            <button>solicite um orçamento</button>
-        </div>
-    </main>
+    <main id="corpo"></main>
     <footer>
         <section class="facebook-contato">
             <div class="facebook">
