--- a/album/album1.html
+++ b/album/album1.html
@@ -4,38 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="image/rizzosphotograph_favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="assets/style/menu.css">
-    <link rel="stylesheet" href="assets/style/img-home.css">
-    <link rel="stylesheet" href="assets/style/rodape.css">
-    <script src="assets/scripts/img-transição-home.js" defer></script>
-    <script src="assets/scripts/menu-cel.js" defer></script>
-    <title>Rizzo's Photograph</title>
+    <link rel="shortcut icon" href="../image/rizzosphotograph_favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/style/menu.css">
+    <link rel="stylesheet" href="../assets/style/album.css">
+    <link rel="stylesheet" href="../assets/style/rodape.css">
+    <script src="../assets/scripts/menu-cel.js" defer></script>
+    <title>Rizzo's Photograph - Album</title>
 </head>
 <body>
     <div id="preto"></div>
-    <header class="menu">
-        <div class="proporcao-menu logo-pagina-inicial" >
-            <a href=""><img src="image/logo/img_logo.png" alt=""></a>
+    <header class="menu menu-padrao">
+        <div class="proporcao-menu logo-padrao" >
+            <a href="index.html"><img src="../image/logo/text_logo.png" alt=""></a>
         </div>
         <input type="checkbox" id="bt_menu">
-        <label for="bt_menu" class="overlay-button"><img class="form_bt_menu" src="image/icon-menu.svg" alt="imagem botão menu"></label>
-        <div class="proporcao-menu abas-pagina-inicial">
+        <label for="bt_menu" class="overlay-button"><img class="form_bt_menu" src="../image/icon-menu.svg" alt="imagem botão menu"></label>
+        <div class="proporcao-menu abas-padrao">
             <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="../about.html">About</a></li>
+                <li><a href="../jobs.html">Jobs</a></li>
             </ul>
         </div>
     </header>
-    <main id="corpo">
-        <section class="imagens">
-            <div id="img-slider">
-                <img class="imagem-tela-grande" src="image/imagens_home/imagem_1.jpg" alt="">
-            </div>
-        </section>
-    </main>
-    <div class="divisão"></div>
+    <main id="corpo"></main>
     <footer>
         <section class="facebook-contato">
             <div class="facebook">
@@ -66,12 +58,12 @@
                 <p class="texto">São Paulo - SP</p>
                 <a class="texto" href="mailto:rizzosphotograph@gmail.com?subject=Solicitação de Orçamento">rizzosphotograph@gmail.com</a>
                 <div class="rede_social">
-                    <a target="_blank" href="https://www.facebook.com/photographrizzo"><img width="25" height="25" src="image/icone-rede-social/icone-facebook.svg" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/rizzosphotograph/"><img width="25" height="25" src="image/icone-rede-social/icone-instagram.svg" alt=""></a>
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt=""></a>
-                    <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt=""></a>
+                    <a target="_blank" href="https://www.facebook.com/photographrizzo"><img width="25" height="25" src="../image/icone-rede-social/icone-facebook.svg" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/rizzosphotograph/"><img width="25" height="25" src="../image/icone-rede-social/icone-instagram.svg" alt=""></a>
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="../image/icone-rede-social/icone-whats.svg" alt=""></a>
+                    <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="../image/icone-rede-social/icone-telefone.svg" alt=""></a>
                 </div>
-                <a href="contact.html"><button class="botão-orçamento-rodape">Orçamento</button></a>
+                <button class="botão-orçamento-rodape">Orçamento</button>
         </section>
         <div class="copy">&copy Rizzo's Photograph</div>
     </footer>
