--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main id="corpo">
         <section class="imagens">
             <div id="img-slider">
-                <img class="imagem-tela-grande" src="image/imagens_home/imagem_1.jpg" alt="">
+                <img class="imagem-tela-grande select" src="image/imagens_home/imagem_1.jpg" alt="">
             </div>
         </section>
     </main>
