--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
         <label for="bt_menu" class="overlay-button"><img class="form_bt_menu" src="image/icon-menu.svg" alt="imagem botão menu"></label>
         <div class="proporcao-menu abas-padrao">
             <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -42,7 +42,7 @@
             <p>Ver uma família nascendo... no dia do sim.</p>
         </div>
         <div class="bt-soliciatar-sobre">
-            <button>solicite um orçamento</button>
+            <a href="contact.html"><button>solicite um orçamento</button></a>
         </div>
     </main>
     <footer>
@@ -75,12 +75,12 @@
                 <p class="texto">São Paulo - SP</p>
                 <a class="texto" href="mailto:rizzosphotograph@gmail.com?subject=Solicitação de Orçamento">rizzosphotograph@gmail.com</a>
                 <div class="rede_social">
-                    <a target="_blank" href="https://www.facebook.com/photographrizzo"><img width="25" height="25" src="image/icone-rede-social/icone-facebook.svg" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/rizzosphotograph/"><img width="25" height="25" src="image/icone-rede-social/icone-instagram.svg" alt=""></a>
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt=""></a>
-                    <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt=""></a>
+                    <a target="_blank" href="https://www.facebook.com/photographrizzo"><img width="25" height="25" src="image/icone-rede-social/icone-facebook.svg" alt="logo facebook"></a>
+                    <a target="_blank" href="https://www.instagram.com/rizzosphotograph/"><img width="25" height="25" src="image/icone-rede-social/icone-instagram.svg" alt="logo instagram"></a>
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt="logo whatsapp"></a>
+                    <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt="logo telefone"></a>
                 </div>
-                <button class="botão-orçamento-rodape">Orçamento</button>
+                <a href="contact.html"><button class="botão-orçamento-rodape">Orçamento</button></a>
         </section>
         <div class="copy">&copy Rizzo's Photograph</div>
     </footer>
