--- a/jobs.html
+++ b/jobs.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="image/rizzosphotograph_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/menu.css">
     <link rel="stylesheet" href="assets/style/jobs.css">
+    <link rel="stylesheet" href="assets/style/album.css">
     <link rel="stylesheet" href="assets/style/rodape.css">
     <script src="assets/scripts/menu-cel.js" defer></script>
     <script src="assets/scripts/jobs.js" defer></script>
@@ -16,19 +17,20 @@
     <div id="preto"></div>
     <header class="menu menu-padrao">
         <div class="proporcao-menu logo-padrao" >
-            <a href="index.html"><img src="image/logo/text_logo.png" alt=""></a>
+            <a href="index.html"><img src="image/logo/text_logo.png" alt="logo de Rizzo's Photograph"></a>
         </div>
         <input type="checkbox" id="bt_menu">
         <label for="bt_menu" class="overlay-button"><img class="form_bt_menu" src="image/icon-menu.svg" alt="imagem botão menu"></label>
         <div class="proporcao-menu abas-padrao">
             <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
     <main id="corpo"></main>
+    <main id="corpo-album"></main>
     <footer>
         <section class="facebook-contato">
             <div class="facebook">
@@ -59,12 +61,12 @@
                 <p class="texto">São Paulo - SP</p>
                 <a class="texto" href="mailto:rizzosphotograph@gmail.com?subject=Solicitação de Orçamento">rizzosphotograph@gmail.com</a>
                 <div class="rede_social">
-                    <a target="_blank" href="https://www.facebook.com/photographrizzo"><img width="25" height="25" src="image/icone-rede-social/icone-facebook.svg" alt=""></a>
-                    <a target="_blank" href="https://www.instagram.com/rizzosphotograph/"><img width="25" height="25" src="image/icone-rede-social/icone-instagram.svg" alt=""></a>
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt=""></a>
-                    <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt=""></a>
+                    <a target="_blank" href="https://www.facebook.com/photographrizzo"><img width="25" height="25" src="image/icone-rede-social/icone-facebook.svg" alt="logo facebook"></a>
+                    <a target="_blank" href="https://www.instagram.com/rizzosphotograph/"><img width="25" height="25" src="image/icone-rede-social/icone-instagram.svg" alt="logo instagram"></a>
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5511995833703&text=Ol%C3%A1%2C%20quero%20falar%20com%20Rizzo's%20Photograph%20para..."><img width="25" height="25" src="image/icone-rede-social/icone-whats.svg" alt="logo whatsapp"></a>
+                    <a target="_blank" title="+5511995833703" href="tel:+5511995833703"><img width="25" height="25" src="image/icone-rede-social/icone-telefone.svg" alt="logo telefone"></a>
                 </div>
-                <button class="botão-orçamento-rodape">Orçamento</button>
+                <a href="contact.html"><button class="botão-orçamento-rodape">Orçamento</button></a>
         </section>
         <div class="copy">&copy Rizzo's Photograph</div>
     </footer>
