--- a/jobs.html
+++ b/jobs.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/style/rodape.css">
     <script src="assets/scripts/menu-cel.js" defer></script>
     <script src="assets/scripts/jobs.js" defer></script>
+    <script src="assets/scripts/album.js" defer></script>
+    <script src="assets/scripts/img-aleatória.js" defer></script>
     <title>Rizzo's Photograph - Trabalhos</title>
 </head>
 <body>
